# AutoClipUpload

./: .gitignore  README.md  main.py  pyproject.toml
src/navigation/: route_names.py  screen_selection.py
src/screens/: configuration.py  home.py  video_options.py  video_upload.py
src/upload/: authentication.py  upload.py
